// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper default 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    />
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    />
  </div>
</div>
`;

exports[`Stepper header position bottom 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    >
      <li
        aria-current="step"
        class="p-stepper-header p-highlight p-stepper-header-bottom"
        data-p-active="true"
        data-p-disabled="false"
        data-p-highlight="true"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_6_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_6_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-bottom"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_6_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_6_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
      </li>
    </ul>
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_6_0_header_action"
        class="p-stepper-content"
        data-p-active="true"
        data-pc-name=""
        data-pc-section="content"
        id="pr_id_6_0content"
        role="tabpanel"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper header position left 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    >
      <li
        aria-current="step"
        class="p-stepper-header p-highlight p-stepper-header-left"
        data-p-active="true"
        data-p-disabled="false"
        data-p-highlight="true"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_7_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_7_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-left"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_7_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_7_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
      </li>
    </ul>
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_7_0_header_action"
        class="p-stepper-content"
        data-p-active="true"
        data-pc-name=""
        data-pc-section="content"
        id="pr_id_7_0content"
        role="tabpanel"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper header position right 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    >
      <li
        aria-current="step"
        class="p-stepper-header p-highlight p-stepper-header-right"
        data-p-active="true"
        data-p-disabled="false"
        data-p-highlight="true"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_5_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_5_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-right"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_5_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_5_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
      </li>
    </ul>
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_5_0_header_action"
        class="p-stepper-content"
        data-p-active="true"
        data-pc-name=""
        data-pc-section="content"
        id="pr_id_5_0content"
        role="tabpanel"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper header position top 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    >
      <li
        aria-current="step"
        class="p-stepper-header p-highlight p-stepper-header-top"
        data-p-active="true"
        data-p-disabled="false"
        data-p-highlight="true"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_4_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_4_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-top"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_4_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_4_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
      </li>
    </ul>
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_4_0_header_action"
        class="p-stepper-content"
        data-p-active="true"
        data-pc-name=""
        data-pc-section="content"
        id="pr_id_4_0content"
        role="tabpanel"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper panels 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-horizontal"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <ul
      class="p-stepper-nav"
      data-pc-section="nav"
    >
      <li
        aria-current="step"
        class="p-stepper-header p-highlight p-stepper-header-right"
        data-p-active="true"
        data-p-disabled="false"
        data-p-highlight="true"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_2_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_2_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-right"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_2_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_2_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
      </li>
      <li
        aria-current="false"
        class="p-stepper-header p-stepper-header-right"
        data-p-active="false"
        data-p-disabled="false"
        data-p-highlight="false"
        data-pc-section="header"
        role="presentation"
      >
        <button
          aria-controls="pr_id_2_2content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_2_2_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            3
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header III
          </span>
        </button>
      </li>
    </ul>
    <div
      class="p-stepper-panels"
      data-pc-section="panelcontainer"
    >
      <div
        aria-labelledby="pr_id_2_0_header_action"
        class="p-stepper-content"
        data-p-active="true"
        data-pc-name=""
        data-pc-section="content"
        id="pr_id_2_0content"
        role="tabpanel"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper vertical 1`] = `
<div>
  <div
    class="p-stepper p-component p-stepper-vertical"
    data-pc-name="stepper"
    data-pc-section="root"
    role="tablist"
  >
    <div
      aria-current="step"
      class="p-stepper-panel p-stepper-panel-active"
      data-p-active="true"
      data-p-disabled="false"
      data-p-highlight="true"
      data-pc-name=""
      data-pc-section="panel"
    >
      <div
        class="p-stepper-header p-highlight"
        data-pc-section="header"
      >
        <button
          aria-controls="pr_id_3_0content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_3_0_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            1
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header I
          </span>
        </button>
      </div>
      <div
        class="p-stepper-toggleable-content"
        data-pc-section="toggleablecontent"
      >
        <span
          aria-hidden="true"
          class="p-stepper-separator"
          data-pc-section="separator"
        />
        <div
          aria-labelledby="pr_id_3_0_header_action"
          class="p-stepper-content p-toggleable-content"
          data-p-active="true"
          data-pc-name=""
          data-pc-section="content"
          id="pr_id_3_0content"
          role="tabpanel"
        >
          <span />
        </div>
      </div>
    </div>
    <div
      aria-current="false"
      class="p-stepper-panel"
      data-p-active="false"
      data-p-disabled="false"
      data-p-highlight="false"
      data-pc-name=""
      data-pc-section="panel"
    >
      <div
        class="p-stepper-header"
        data-pc-section="header"
      >
        <button
          aria-controls="pr_id_3_1content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_3_1_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            2
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header II
          </span>
        </button>
      </div>
    </div>
    <div
      aria-current="false"
      class="p-stepper-panel"
      data-p-active="false"
      data-p-disabled="false"
      data-p-highlight="false"
      data-pc-name=""
      data-pc-section="panel"
    >
      <div
        class="p-stepper-header"
        data-pc-section="header"
      >
        <button
          aria-controls="pr_id_3_2content"
          class="p-stepper-action p-component"
          data-pc-section="action"
          id="pr_id_3_2_header_action"
          role="tab"
          type="button"
        >
          <span
            class="p-stepper-number"
            data-pc-section="number"
          >
            3
          </span>
          <span
            class="p-stepper-title"
            data-pc-section="title"
          >
            Header III
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
